// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asset cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyAsset' incorrectly implements interface 'Asset'.
  Type 'MyAsset' is missing the following properties from type 'Asset': hash, type, amount, available, and 5 more.

      2 |       import { Asset } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyAsset implements Asset {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`Asset invalid "reference" 1`] = `
"snippetCode.ts (4,25): Builtin properties cannot be referenced

      2 |       import { Asset } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Asset['for'];
        |                         ^
      5 |     
"
`;

exports[`Asset invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { Asset } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = Asset;
        |               ^
      5 |     
"
`;

exports[`Asset invalid reference 1`] = `
"snippetCode.ts (4,25): Builtin properties cannot be referenced

      2 |       import { Asset } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Asset.for;
        |                         ^
      5 |     
"
`;
